hphp/hack/test/typecheck/this/fun_param.php.exp
ERROR: File "fun_param.php", line 3, characters 18-22:
Cannot re-assign `$this` (Parsing[1002])
ERROR: File "fun_param.php", line 5, characters 33-37:
Cannot re-assign `$this` (Parsing[1002])
ERROR: File "fun_param.php", line 3, characters 18-22:
Cannot use `$this` as lexical variable (Naming[2077])
ERROR: File "fun_param.php", line 5, characters 33-37:
Cannot use `$this` as lexical variable (Naming[2077])
